test formation section

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                         <li><a class="btn-nav js-closeMenu" href="#document" >Documents</a></li>
                         <li><a class="btn-nav js-closeMenu" href="#missionEx" >Missions EXplosive</a></li>
                         <li><a class="btn-nav js-closeMenu" href="#intervention" >Intervention</a></li>
+                        <li><a class="btn-nav js-closeMenu" href="#inscription" >Inscription</a></li>
                     </ul>
                 </div>
 
@@ -112,7 +113,7 @@
                                                 <div class="section-heading-outer">
                                                     <h1 class="heading head--h1-test">
                                                         <span class="color">LORATEX</span>
-                                                        <br>La sécurité des instalations<br>à risque d'explosion<br><span class="">par la formation</span>
+                                                        <br>La sécurité des installations<br>à risque d'explosion<br><span class="">par la formation</span>
                                                     </h1>
                                                 </div>
                                             </div>
@@ -128,6 +129,7 @@
                                             <li><a class="btn-mask" href="#document">DOCUMENTS</a></li>
                                             <li><a class="btn-mask" href="#missionEx">MISSIONS EXPLOSIVES</a></li>
                                             <li><a class="btn-mask" href="#intervention">INTERVENTIONS</a></li>
+                                            <li><a class="btn-mask" href="#inscription">INSCRIPTION</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -1071,6 +1073,18 @@
                                                     Certificats de formateur - auditeur Saqr-ATEX 2022
                                                 </a>
                                             </div>
+                                            <div class="btn-form-outer wow">  <!-- Button Area -->
+                                                <a href="pdf/documents/Divers/CGV_Loratex_2022.pdf" target="_blank" class="btn right-icon btn-mask">
+                                                    <i class="icon icon-icon-documents-alt features-icon document--icon-marge"></i>
+                                                    Conditions générales de ventes 2022
+                                                </a>
+                                            </div>
+                                            <div class="btn-form-outer wow">  <!-- Button Area -->
+                                                <a href="pdf/documents/Divers/Modalités d'inscription - Loratex.pdf" target="_blank" class="btn right-icon btn-mask">
+                                                    <i class="icon icon-icon-documents-alt features-icon document--icon-marge"></i>
+                                                    Modalités d'inscription
+                                                </a>
+                                            </div>
                                         </div>
 
                                     </div>
@@ -1268,16 +1282,16 @@
 
                             <!-- Video area -->
                             <div class="col-md-8 col-md-offset-2">
-                                    <div class="features-image-outer missionEx--video-marge">
-                                        <div class="image-outer ">
-                                            <video width="100%" controls src="video/Mission_EXplosive_LORATEX.mp4" preload="none" poster="images/Mission_Ex-Background_video.png">
-                                                Votre navigateur ne permet pas de lire les vidéos.
-                                                Mais vous pouvez toujours
-                                                <a href="video/MIission_EXplosive_LORATEX.mp4">la télécharger</a> !
-                                            </video>
-                                        </div>
+                                <div class="features-image-outer missionEx--video-marge">
+                                    <div class="image-outer ">
+                                        <video width="100%" controls src="video/Mission_EXplosive_LORATEX.mp4" preload="none" poster="images/Mission_Ex-Background_video.png">
+                                            Votre navigateur ne permet pas de lire les vidéos.
+                                            Mais vous pouvez toujours
+                                            <a href="video/MIission_EXplosive_LORATEX.mp4">la télécharger</a> !
+                                        </video>
                                     </div>
-                                </div> <!-- End: Video Area -->
+                                </div>
+                            </div> <!-- End: Video Area -->
 
                         </div> <!-- End: Content section -->
 
@@ -1292,7 +1306,7 @@
 
 
 
-            <!--Start: 5rd Section
+        <!--Start: 6rd Section
             - INTERVENTIONS
         ====================================-->
         <div class=" section section-item dark-background section--color-dark" id="portfolio-section">
@@ -1333,7 +1347,7 @@
                                                     </div>
                                                 </div>
 
-                                                <div class="link-list overflow wow">
+                                                <!-- <div class="link-list overflow wow">
                                                     <div class="link one overflow">
                                                         <div class="inner">
                                                             <a class="btn btn-project-detail right-icon btn-mask" href="#" data-element="project-detail">DETAILS <i class="icon icon-arrow-right"></i></a>
@@ -1345,7 +1359,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="line hidden-xs"></div>
-                                                </div>
+                                                </div> -->
                                             </div>
 
                                             <div class="col-md-10 col-md-offset-1 col-sm-12 slider-outer">
@@ -1387,7 +1401,7 @@
 
                                                             <div class="overflow">
                                                                 <div class="heading-outer">
-                                                                    <h2 class="heading">Audits des instalations</h2>
+                                                                    <h2 class="heading">Audits des installations</h2>
                                                                 </div>
                                                             </div> <!-- End: .overflow -->
 
@@ -1445,13 +1459,115 @@
             </div> <!-- End: .inner-container -->
 
         </div>
-        <!--End: 5th Section
+        <!--End: 6th Section
             - INTERVENTIONS
         ====================================-->
 
 
+        <!--Start: 7th Section
+            - CONSEILS
+        ====================================-->
+        <div class="section section-item combine-section hide-overlay semi-dark-background section--color-light" id="inscription-section">
+            <div class="inner-container testimonial-section" id="inscription">
+                <div class="container" id="inscription">
+                    <div class="row section-separator sp-bottom">
 
-        <!--Start: 6th Section
+                        <!-- Start: Section Heading -->
+
+
+                        <div class="section-header col-sm-10 col-sm-offset-1">
+                            <div class="overflow">
+                                <div class="line-outer">
+                                    <div class="line wow"></div>
+                                </div>
+                            </div>
+                            <div class="overflow">
+                                <div class="section-heading-outer m-b-15">
+                                    <p class="sub-heading wow sections--titre-taille">Inscription</p>
+                                </div>
+                            </div>
+                            <div class="overflow">
+                                <div class="section-heading-outer p-l-50 p-r-50">
+                                    <h2 class="section-heading wow">Modalités d’inscription<br>aux formations de LORATEX*</h2>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End: Section Heading -->
+
+                        <div class="clearfix"></div>
+
+                        <!-- Content section -->
+                        <div class="missionEx--content-display">
+
+                            <!-- Content Text Area -->
+                            <div class="col-md-10 col-md-offset-1">
+                                <div class="services-content-outer missionEx--text-align">
+
+                                    <!-- <div class="section-title-outer overflow">
+                                        <h3 class="section-title">Matériel Mécanique</h3>
+                                    </div> -->
+
+                                    <div class="overflow m-t-15">
+                                        <div class="title-outer">
+                                            <h4 class="title relative missionEx--titre-police">
+                                                L’entreprise analyse ses besoins de formation
+                                            </h4>
+                                        </div>
+                                        <div class="title-outer">
+                                            <h4 class="title relative missionEx--titre-police">
+                                                L’entreprise exprime sa demande par écrit ou par téléphone
+                                            </h4>
+                                        </div>
+                                        <div class="title-outer">
+                                            <h4 class="title relative missionEx--titre-police">
+                                                Loratex adresse à l’entreprise une proposition commerciale avec validité de 3,6, ou de fin d’année en cours
+                                            </h4>
+                                        </div>
+                                        <div class="title-outer">
+                                            <h4 class="title relative missionEx--titre-police">
+                                                L’entreprise commande la formation
+                                            </h4>
+                                        </div>
+                                        <div class="title-outer">
+                                            <h4 class="title relative missionEx--titre-police">
+                                                Loratex adresse une convention de formation sur demande, une facture, les attestations de formation et les certificats de compétence**
+                                            </h4>
+                                        </div>
+                                    </div>
+
+
+                                    <div class="overflow">
+                                        <div class="pera-outer missionEx--liste-style m-t-30">
+                                            <ul>
+                                                <li class="conseil--liste-decoration" >
+                                                    <i>*Dans le cadre de l’inscription a du personnel en situation de handicap, l’entreprise communiquera avec Loratex pour déterminer les conditions de réalisation de la formation.</i>
+                                                </li>
+                                                <li class="conseil--liste-decoration" >
+                                                    <i>**Sous réserve de l’imputabilité de l’action de formation et de la validation des évaluations ISM ATEX</i>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+
+                                </div> <!-- End: .services-content-outer -->
+                            </div> <!-- End: Content Text Area -->
+
+                        </div> <!-- End: Content section -->
+
+                    </div> <!-- End: .row -->
+                </div> <!-- End: .container -->
+            </div> <!-- End: .inner-container -->
+
+        </div>
+        <!--End: 7th Section
+            - CONSEILS
+        ====================================-->
+
+
+
+
+
+        <!--Start: 7th Section
             - NOTRE EQUIPE
         ====================================-->
         <div class=" section section-item combine-section hide-overlay overflow semi-dark-background section--color-light" id="team-section">
@@ -1511,13 +1627,13 @@
             </div> <!-- End: .inner-container -->
 
         </div>
-        <!--End: 5th Section
+        <!--End: 7th Section
             - NOTRE EQUIPE
         ====================================-->
 
 
 
-        <!--Start: 7th Section
+        <!--Start: 8th Section
             - CONTACT US PAGE
         ====================================-->
         <div class=" section section-item combine-section hide-overlay overflow wow section--color-light" id="contact-us-section">
@@ -1669,10 +1785,10 @@
                                                             </div>
                                                         </li>
                                                         <li class="overflow">
-                                                                <div class="li-inner wow">
-                                                                    <a href="#" class="btn-mask">- Mentions Légales -</a>
-                                                                </div>
-                                                            </li>
+                                                            <div class="li-inner wow">
+                                                                <a href="pdf/documents/Divers/CGV_Loratex_2022.pdf" class="btn-mask">- CGV 2022 -</a>
+                                                            </div>
+                                                        </li>
                                                     </ul>
 
                                                 </div>
@@ -1722,7 +1838,7 @@
             </div>
 
         </div>
-        <!--End: 6th Section
+        <!--End: 8th Section
             - CONTACT US PAGE
         ====================================-->
 
