Change pdf version

--- a/app/index.html
+++ b/app/index.html
@@ -470,7 +470,7 @@
                                                         </a>
                                                     </div>
                                                     <div class="list col-sm-12">
-                                                        <a target="_blank" href="pdf/formations/Formation ATEX électrique/FORMATION LOF-SENS-ATEX recy niv 1E 2022.pdf">
+                                                        <a target="_blank" href="pdf/formations/Formation ATEX électrique/FORMATION LOF-SENS-ATEX recy niv 1E 2022 vs0422.pdf">
                                                             <div class="row">
                                                                 <i class="icon icon-icon-search-alt"></i> Recyclage des agents intervenants sur les matériels ATEX électriques niv. 1E
                                                             </div>
@@ -484,7 +484,7 @@
                                                         </a>
                                                     </div>
                                                     <div class="list col-sm-12">
-                                                        <a target="_blank" href="pdf/formations/Formation ATEX électrique/FORMATION LOF-ISM-ATEX recy niv 2E 2022.pdf">
+                                                        <a target="_blank" href="pdf/formations/Formation ATEX électrique/FORMATION LOF-ISM-ATEX recy niv 2E 2022 vs 0422.pdf">
                                                             <div class="row">
                                                                 <i class="icon icon-icon-search-alt"></i> Recyclage des personnes autorisées sur les installations électriques, services et maintenance ATEX niv. 2E
                                                             </div>
@@ -572,7 +572,7 @@
                                                         </a>
                                                     </div>
                                                     <div class="list col-sm-12">
-                                                        <a target="_blank" href="pdf/formations/Formation ATEX non électrique/FORMATION LOF-SENS-ATEX recy niv 1M 2022.pdf">
+                                                        <a target="_blank" href="pdf/formations/Formation ATEX non électrique/FORMATION LOF-SENS-ATEX recy niv 1M vs0422.pdf">
                                                             <div class="row">
                                                                 <i class="icon icon-icon-search-alt"></i> Recyclage des agents et personnes autorisées sur les matériels ATEX non électriques niv. 1M
                                                             </div>
@@ -688,7 +688,7 @@
                                                         </a>
                                                     </div>
                                                     <div class="list col-sm-12">
-                                                        <a target="_blank" href="pdf/formations/Formation ATEX elec et non elec/FORMATION LOF-ISM-ATEX recy niv 2ME 2022.pdf">
+                                                        <a target="_blank" href="pdf/formations/Formation ATEX elec et non elec/FORMATION LOF-ISM-ATEX recy niv 2ME 2022 vs0422.pdf">
                                                             <div class="row">
                                                                 <i class="icon icon-icon-search-alt"></i> Recyclage des agents et personnes autorisées sur les installations électriques et mécanique et maintenance ATEX niv. 2ME
                                                             </div>
@@ -768,14 +768,14 @@
                                             <div class="overflow m-t-15">
                                                 <div class="list-outer">
                                                     <div class="list col-sm-12">
-                                                        <a target="_blank" href="pdf/formations/Formation Réparation/FORMATION LOF-Saqr-Atex PA 2022.pdf">
+                                                        <a target="_blank" href="pdf/formations/Formation Réparation/FORMATION LOF-Saqr-Atex PA 2022 vs0422.pdf">
                                                             <div class="row">
                                                                 <i class="icon icon-icon-search-alt"></i> Formation du personnel des ateliers de réparation des matériels ATEX et préparation à la certification SAQR-ATEX
                                                             </div>
                                                         </a>
                                                     </div>
                                                     <div class="list col-sm-12">
-                                                        <a target="_blank" href="pdf/formations/Formation Réparation/FORMATION LOF-Saqr_ATEX recy-PA 2022.pdf">
+                                                        <a target="_blank" href="pdf/formations/Formation Réparation/FORMATION LOF-Saqr_ATEX recy-PA 2022 vs0422.pdf">
                                                             <div class="row">
                                                                 <i class="icon icon-icon-search-alt"></i> Formation des agents et personnes autorisées à la réparation des matériels en atmosphères explosibles SAQR-ATEX et recyclage des compétences
                                                             </div>
@@ -1072,15 +1072,21 @@
                                                 </a>
                                             </div>
                                             <div class="btn-form-outer wow">  <!-- Button Area -->
-                                                <a href="pdf/documents/Divers/CGV_Loratex_2022.pdf" target="_blank" class="btn right-icon btn-mask">
+                                                <a href="pdf/documents/Divers/CGV-Loratex_2022 vs4.pdf" target="_blank" class="btn right-icon btn-mask">
                                                     <i class="icon icon-icon-documents-alt features-icon document--icon-marge"></i>
                                                     Conditions générales de ventes 2022
                                                 </a>
                                             </div>
                                             <div class="btn-form-outer wow">  <!-- Button Area -->
-                                                <a href="pdf/documents/Divers/Modalités d'inscription - Loratex.pdf" target="_blank" class="btn right-icon btn-mask">
+                                                <a href="pdf/documents/Divers/Modalités d'incription aux formations LORATEX vs2.pdf" target="_blank" class="btn right-icon btn-mask">
                                                     <i class="icon icon-icon-documents-alt features-icon document--icon-marge"></i>
                                                     Modalités d'inscription
+                                                </a>
+                                            </div>
+                                            <div class="btn-form-outer wow">  <!-- Button Area -->
+                                                <a href="pdf/documents/Divers/REGLEMENT INTERIEUR LORATEX 3012022.pdf" target="_blank" class="btn right-icon btn-mask">
+                                                    <i class="icon icon-icon-documents-alt features-icon document--icon-marge"></i>
+                                                    Réglement Intérieur LORATEX 2022
                                                 </a>
                                             </div>
                                         </div>
